<resources>
    <string name="app_name">HomeCalc</string>
    <string name="text_color">Text Color</string>
    <string name="border_color">Border Color</string>
    <string name="background_color">Background Color</string>
    <string name="widget_format">Widget %s</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="divide">&#247;</string>
    <string name="times">&#215;</string>
    <string name="minus">&#8722;</string>
    <string name="plus">+</string>
    <string name="del">DEL</string>
    <string name="clear">C</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="negative">-</string>

    <string name="copied">Copied %s to clipboard</string>
    <string name="add_widget_hint">Go to your Home Screen\'s settings to add HomeCalc as a widget.</string>
</resources>
